--- a/ClassifySpaceRockCode.ipynb
+++ b/ClassifySpaceRockCode.ipynb
@@ -438,6 +438,7 @@
    "outputs": [],
    "source": [
     "# 모든 신경망 구축 : 전이학습을 위해 모델의 가중치를 freeze 한다.\n",
+    "# 모델의 가중치를 freeze 한 이유는 \n",
     "for param in model.parameters():\n",
     "    # freeze model weights\n",
     "    param.requires_grad = False\n",
